@@ -39,6 +39,8 @@
       display: block;
       opacity: .6;
       @include transition($transition);
+      /* Overrides core > 1.3.11, otherwise thumbnails are non-clickable */
+      pointer-events: auto;
     }
     /* Adjust accordingly to actual thumbnail size */
     .slide__thumbnail {
