@@ -375,6 +375,10 @@ function slick_attach(array $attach) {
   // have since responsives got no inheritance and no context without, pity.
   if ($attach['attach_default']) {
     $defaults = _slick_optionset_defaults(NULL, 'settings');
+    // Prevent JS error with Slick > 1.3.11 within responsive display clone.
+    // Error: Syntax error, unrecognized expression: $(element).
+    $defaults['appendDots'] = '';
+    $defaults['appendArrows'] = '.slick__arrow';
     $load['js'][] = array(
       'data' => array('slick' => $defaults),
       'type' => 'setting',
