@@ -1,6 +1,14 @@
 
 Slick 7.x-2.0-dev, 2014-10-11
 -----------------------------
+Fixed core library hotfix 1.3.11 which removes pointer-events for Firefox
+  draggable issue from all images which in turn makes thumbnails non-clickable
+  anymore, nullifying focusOnSelect. Hence added the pointer-events back to
+  thumbnail images.
+Fixed for JS error with Slick > 1.3.11 within responsive display clone:
+  Error: Syntax error, unrecognized expression: $(element).
+Fixed for Notice: Undefined property: views_handler_field_node_*::
+  $field_info in SlickViewsPluginStyleSlick->options_form()
 Fixed for sudden jump scroll from last to first slide and vice versa at
   slick.theme--3d-back.css.
 Updated to Slick 1.3.11
